--- a/app.html
+++ b/app.html
@@ -99,7 +99,7 @@
             <div class="row"> 
                  <div class="col-md-6"> 
                         <h3>Entre em contactos</h3>
-                        <p>Endereço: Rua da Vila-Alice</p> 
+                        <p>Endereço: Rua dos coqueiros</p> 
                     <p>Emai: pesselaabreu@gmail.com</p> 
              </div> 
  
